wrapped all js logice in js files in init funtions to prevent same named variable conflicts among js files.  Created landing container with login and register buttons - used add and remove claslist method to show and hid appropriate forms

--- a/css/login.css
+++ b/css/login.css
@@ -26,3 +26,49 @@ body {
 body {
   font-family: "Roboto", sans-serif, Geneva, Verdana, sans-serif;
 }
+
+.d-none {
+  display: none;
+}
+
+#login-form,
+#landing-form {
+  margin-top: 50px;
+  border: 2px solid rgb(90, 89, 89);
+  background-color: rgb(182, 202, 223);
+  padding: 20px;
+  border-radius: 10px;
+}
+
+#login-form .login-form-title,
+#landing-form .login-form-title {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+#login-form .login-form-buttons,
+#landing-form .login-form-buttons {
+  margin-top: 10px;
+  width: 100%;
+  text-align: center;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+#login-form .login-form-buttons button {
+  /* margin: 0 10px 0 10px; */
+}
+
+.btn .submit {
+  background-color: aqua;
+  width: 100px;
+}
+
+input,
+label {
+  margin: 10px 0 0 0;
+}
+
+label {
+  margin-left: 5px;
+}
