--- a/css/register.css
+++ b/css/register.css
@@ -65,3 +65,7 @@ label {
 label {
   margin-left: 5px;
 }
+
+.d-none {
+  display: none;
+}
